# aeon

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: difficulty.rs  emission.rs  ghostdag.rs  lib.rs  types.rs  utxo.rs  validation.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: address.rs  hash.rs  keys.rs  keystore.rs  lib.rs  mnemonic.rs
crates/miner/: Cargo.toml
crates/miner/src/: main.rs
crates/network/: Cargo.toml
crates/network/src/: framing.rs  lib.rs  message.rs
crates/node/: Cargo.toml
crates/node/src/: actor.rs  backend.rs  genesis.rs  lib.rs  main.rs  mempool.rs
crates/node/tests/: shielded_integration.rs  two_node_integration.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: client.rs  lib.rs  server.rs  types.rs
crates/shielded/: Cargo.toml
crates/shielded/src/: bundle.rs  keys.rs  lib.rs  tree.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: main.rs
docs/: ARCHITECTURE.md  CONSENSUS.md  GETTING_STARTED.md  MINING.md  PRIVACY.md  WALLET.md
scripts/: run-local-testnet.ps1
