[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/crypto",
    "crates/storage",
    "crates/network",
    "crates/rpc",
    "crates/node",
    "crates/miner",
    "crates/wallet",
    "crates/shielded",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Aeon Contributors"]
license = "MIT"
repository = "https://github.com/melvinfranco99/aeon"
rust-version = "1.75"

[workspace.dependencies]
aeon-core = { path = "crates/core" }
aeon-crypto = { path = "crates/crypto" }
aeon-storage = { path = "crates/storage" }
aeon-network = { path = "crates/network" }
aeon-rpc = { path = "crates/rpc" }
aeon-shielded = { path = "crates/shielded" }
orchard = { version = "0.15", features = ["circuit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
blake3 = "1"
k256 = { version = "0.13", features = ["schnorr", "ecdsa", "std"] }
rand_core = { version = "0.6", features = ["std"] }
rand = "0.8"
sled = "0.34"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json", "blocking"] }
bech32 = "0.9"
bip39 = { version = "2", features = ["rand"] }
aes-gcm = "0.10"
scrypt = "0.11"
thiserror = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
