[package]
name = "aeon-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeon consensus: GHOSTDAG BlockDAG engine, UTXO ledger, emission schedule, difficulty adjustment"

[dependencies]
aeon-crypto.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
primitive-types = { version = "0.12", default-features = false, features = ["std"] }

[dev-dependencies]
