[package]
name = "aeon-miner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeon CPU miner: fetches block templates over RPC, searches for a valid proof-of-work nonce, submits solved blocks"

[[bin]]
name = "aeon-miner"
path = "src/main.rs"

[dependencies]
aeon-core.workspace = true
aeon-rpc.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
