[package]
name = "aeon-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeon peer-to-peer gossip network: TCP + length-prefixed bincode framing"

[dependencies]
aeon-core.workspace = true
aeon-crypto.workspace = true
tokio.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true
tracing.workspace = true
