[package]
name = "aeon-rpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JSON-RPC types, axum server and HTTP client shared by aeon-node, aeon-miner and aeon-wallet"

[dependencies]
aeon-core.workspace = true
aeon-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tokio.workspace = true
reqwest.workspace = true
async-trait = "0.1"
