[package]
name = "aeon-shielded"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeon's optional shielded (private) transaction pool, built on Zcash's audited Orchard protocol"

[dependencies]
aeon-crypto.workspace = true
orchard = { version = "0.15", features = ["circuit"] }
incrementalmerkletree = "0.8"
shardtree = "0.7"
pasta_curves = "0.5"
zip32 = "0.2"
nonempty = "0.11"
zcash_note_encryption = "0.4"
bip39 = { version = "2", features = ["rand"] }
bech32.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
bincode.workspace = true
thiserror.workspace = true

[dev-dependencies]
