[package]
name = "aeon-wallet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aeon CLI wallet: BIP39 mnemonics, an encrypted keystore, and sending/receiving AEON over a node's RPC API"

[[bin]]
name = "aeon-wallet"
path = "src/main.rs"

[dependencies]
aeon-core.workspace = true
aeon-crypto.workspace = true
aeon-rpc.workspace = true
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rpassword = "7"
